fix: updated swagger configuration to accept tenant id; fixed create DID API DTO
